--- a/SchoolMgmt/src/main/webapp/WEB-INF/css/customstyle.css
+++ b/SchoolMgmt/src/main/webapp/WEB-INF/css/customstyle.css
@@ -7,6 +7,10 @@ body {
 	color: white;
 }
 
+.newsheader{
+	color:black !important;
+}
+
 .list-group-item.active {
 	background-color: black !important;
 	border-color: #aed248;
@@ -29,8 +33,8 @@ body {
 }
 
 .navbar-default {
-	background-color: #f05c0c !important;
-	border-color: #e7290c !important;
+	background-color: #1e767a !important;
+	border-color: #0c2f30 !important;
 	z-index: 999;
 }
 
@@ -69,7 +73,7 @@ body {
 }
 
 .navbar-default .navbar-toggle {
-	border-color: #e7290c !important;
+	border-color: #061718 !important;
 }
 
 .navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus
@@ -104,12 +108,14 @@ body {
 }
 
 #header {
-	background-color: #333333 !important;
+	background-color: #061718 !important;
 	width:100% !important;
 	border-color: #e7290c !important;
 	color: white !important;
 	position: absolute ! important;
 	top: 33px !important;
+	padding-left: 45px;
+	 font: italic bold 12px/30px Georgia, serif !important;
 
 }
 
@@ -122,6 +128,10 @@ body {
 
 .col-md-3{
 	padding-left: 0px !important;
+}
+
+#scrollcontent{
+	overflow:auto	
 }
 
 #headerall {
@@ -142,7 +152,7 @@ body {
 }
 
 #menubody {
-	background-color: #400040;
+	background-color: #092324;
 }
 
 .btn-squared-default {
@@ -183,6 +193,10 @@ body {
 #submit {
    display: block;
    margin: auto;
+}
+
+#myTable{
+	padding-left: 50px !important;
 }
 
 .modal-header {
@@ -243,4 +257,166 @@ body {
 		color: #ffffff;
 		background-color: #e7290c;
 	}
+}
+
+div.main{
+    background: #0264d6; /* Old browsers */
+background: -moz-radial-gradient(center, ellipse cover,  #0264d6 1%, #1c2b5a 100%); /* FF3.6+ */
+background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(1%,#0264d6), color-stop(100%,#1c2b5a)); /* Chrome,Safari4+ */
+background: -webkit-radial-gradient(center, ellipse cover,  #0264d6 1%,#1c2b5a 100%); /* Chrome10+,Safari5.1+ */
+background: -o-radial-gradient(center, ellipse cover,  #0264d6 1%,#1c2b5a 100%); /* Opera 12+ */
+background: -ms-radial-gradient(center, ellipse cover,  #0264d6 1%,#1c2b5a 100%); /* IE10+ */
+background: radial-gradient(ellipse at center,  #0264d6 1%,#1c2b5a 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0264d6', endColorstr='#1c2b5a',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+height:calc(100vh);
+width:100%;
+}
+
+[class*="fontawesome-"]:before {
+  font-family: 'FontAwesome', sans-serif;
+}
+
+/* ---------- GENERAL ---------- */
+
+* {
+  box-sizing: border-box;
+    margin:0px auto;
+
+  &:before,
+  &:after {
+    box-sizing: border-box;
+  }
+
+}
+
+/* body { */
+   
+/*     color: #606468; */
+/*   font: 87.5%/1.5em 'Open Sans', sans-serif; */
+/*   margin: 0; */
+/* } */
+
+a {
+	color: #8080ff;
+	text-decoration: none;
+}
+
+a:hover {
+	text-decoration: underline;
+}
+
+input {
+	border: none;
+	font-family: 'Open Sans', Arial, sans-serif;
+	font-size: 14px;
+	line-height: 1.5em;
+	padding: 0;
+	-webkit-appearance: none;
+}
+
+p {
+	line-height: 1.5em;
+}
+
+.clearfix {
+  *zoom: 1;
+
+  &:before,
+  &:after {
+    content: ' ';
+    display: table;
+  }
+
+  &:after {
+    clear: both;
+  }
+
+}
+
+.logincontainer {
+  left: 50%;
+  position: fixed;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
+/* ---------- LOGIN ---------- */
+
+#login form{
+	width: 250px;
+}
+#login, .logo{
+    display:inline-block;
+    width:40%;
+}
+#login{
+border-right:1px solid #fff;
+  padding: 0px 22px;
+  width: 59%;
+}
+.logo{
+color:#fff;
+font-size:50px;
+line-height: 125px;
+}
+
+#login form span.fa {
+	background-color: #fff;
+	border-radius: 3px 0px 0px 3px;
+	color: #000;
+	display: block;
+	float: left;
+	height: 50px;
+    font-size:24px;
+	line-height: 50px;
+	text-align: center;
+	width: 50px;
+}
+
+#login form input {
+	height: 50px;
+	border-radius: 0px 3px 3px 0px;
+}
+fieldset{
+    padding:0;
+    border:0;
+    margin: 0;
+
+}
+#login form input[type=""], input[type=""] {
+	background-color: #fff;
+	border-radius: 0px 3px 3px 0px;
+	color: #000;
+	margin-bottom: 1em;
+	padding: 0 16px;
+	width: 200px;
+}
+
+#login form input[type="submit"] {
+  border-radius: 3px;
+  -moz-border-radius: 3px;
+  -webkit-border-radius: 3px;
+  background-color: #000000;
+  color: #eee;
+  font-weight: bold;
+  /* margin-bottom: 2em; */
+  text-transform: uppercase;
+  padding: 5px 10px;
+  height: 30px;
+}
+
+#login form input[type="submit"]:hover {
+	background-color: #d44179;
+}
+
+#login > p {
+	text-align: center;
+}
+
+#login > p span {
+	padding-left: 5px;
+}
+.middle {
+  display: flex;
+  width: 600px;
 }
