--- a/SchoolMgmt/src/main/webapp/WEB-INF/css/customstyle.css
+++ b/SchoolMgmt/src/main/webapp/WEB-INF/css/customstyle.css
@@ -24,6 +24,13 @@ body {
 	height: 33px !important;
 	margin-bottom: 0 !important;
 	border-radius: 0 !important;
+	height:33px;
+	padding-bottom: 8px !important;
+	
+}
+
+.navbar-header{
+	height:33px;
 }
 
 .navbar-nav>li>a, .navbar-brand {
@@ -42,60 +49,68 @@ body {
 	color: #ffffff !important;
 }
 
-.navbar-default .navbar-brand:hover, .navbar-default .navbar-brand:focus
-	{
-	color: #ffffff !important;
+#searchBtn{
+padding-top: 15px;
+padding-left:8px;
+padding-right:8px;
+padding-bottom:15px;	
 }
 
-.navbar-default .navbar-text {
-	color: #ffffff !important;
-}
+/* .navbar-default .navbar-brand:hover, .navbar-default .navbar-brand:focus */
+/* 	{ */
+/* 	color: #ffffff !important; */
+/* } */
+
+/* .navbar-default .navbar-text { */
+/* 	color: #ffffff !important; */
+/* } */
 
 .navbar-default .navbar-nav>li>a {
 	color: #ffffff !important;
 }
 
-.navbar-default .navbar-nav>li>a:hover, .navbar-default .navbar-nav>li>a:focus
-	{
-	color: #ffffff !important;
-}
+/* .navbar-default .navbar-nav>li>a:hover, .navbar-default .navbar-nav>li>a:focus */
+/* 	{ */
+/* 	color: #ffffff !important; */
+/* } */
 
-.navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:hover,
-	.navbar-default .navbar-nav>.active>a:focus {
-	color: #ffffff !important;
-	background-color: #e7290c !important;
-}
+/* .navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:hover, */
+/* 	.navbar-default .navbar-nav>.active>a:focus { */
+/* 	color: #ffffff !important; */
+/* 	background-color: #e7290c !important; */
+/* } */
 
-.navbar-default .navbar-nav>.open>a, .navbar-default .navbar-nav>.open>a:hover,
-	.navbar-default .navbar-nav>.open>a:focus {
-	color: #ffffff !important;
-	background-color: #e7290c !important;
-}
+/* .navbar-default .navbar-nav>.open>a, .navbar-default .navbar-nav>.open>a:hover, */
+/* 	.navbar-default .navbar-nav>.open>a:focus { */
+/* 	color: #ffffff !important; */
+/* 	background-color: #e7290c !important; */
+/* } */
 
 .navbar-default .navbar-toggle {
 	border-color: #061718 !important;
 }
 
-.navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus
-	{
-	background-color: #e7290c;
-}
+/* .navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus */
+/* 	{ */
+/* 	background-color: #e7290c; */
+/* } */
 
-.navbar-default .navbar-toggle .icon-bar {
-	background-color: #ffffff;
-}
+/* .navbar-default .navbar-toggle .icon-bar { */
+/* 	background-color: #ffffff; */
+/* } */
 
 .navbar-default .navbar-collapse, .navbar-default .navbar-form {
 	border-color: #ffffff;
+	background-color:  #1e767a;
 }
 
-.navbar-default .navbar-link {
-	color: #ffffff;
-}
+/* .navbar-default .navbar-link { */
+/* 	color: #ffffff; */
+/* } */
 
-.navbar-default .navbar-link:hover {
-	color: #ffffff;
-}
+/* .navbar-default .navbar-link:hover { */
+/* 	color: #ffffff; */
+/* } */
 
 .main-color-bg {
 	background-color: #665c57 !important;
@@ -109,9 +124,9 @@ body {
 
 #header {
 	background-color: #061718 !important;
-	width:100% !important;
+ 	width:100% !important; */
 	color: white !important;
-	position: absolute ! important;
+ 	position: absolute ;
 	top: 33px !important;
 	padding-left: 45px;
 	 font: italic bold 12px/30px Georgia, serif !important;
@@ -221,6 +236,25 @@ body {
    margin: auto;
 }
 
+blockquote {
+	font-family: 'Droid Sans', sans-serif;
+	border-left: none
+}
+
+.inner-block {
+	overflow: hidden;
+	border-radius: 17px;
+	background-color: #178274;
+	margin-top: 25px;
+	color: white;
+	width: 660px;
+}
+
+.block-text {
+	font-size: 19px;
+	margin-top: 13px;
+}
+
 #myTable{
 	padding-left: 50px !important;
 }
@@ -304,16 +338,16 @@ width:100%;
 
 /* ---------- GENERAL ---------- */
 
-* {
-  box-sizing: border-box;
-    margin:0px auto;
+/* * { */
+/*   box-sizing: border-box; */
+/*     margin:0px auto; */
 
-  &:before,
-  &:after {
-    box-sizing: border-box;
-  }
+/*   &:before, */
+/*   &:after { */
+/*     box-sizing: border-box; */
+/*   } */
 
-}
+/* } */
 
 /* body { */
    
